added graphs to html and styling to css

--- a/static/js/graphs.html
+++ b/static/js/graphs.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <script src="d3-src/d3.min.js" charset="utf-8"></script>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
     <title>Testing Bar Graphs</title>
 
     <style>
@@ -78,7 +78,7 @@
       <div class="yearone" id="y10"> </div>
     </svg>
     
-    <script src="test.js"></script>
+    <script src="page.js"></script>
     
   </body>
 </html>
